--- a/docs/style.css
+++ b/docs/style.css
@@ -103,6 +103,14 @@ h3 {
   font-weight: bold;
 }
 
+h4 {
+  font-weight: bold;
+}
+
+h5 {
+  font-weight: bold;
+}
+
 .sourceCode .r pre {
   border-radius: 5px;
   border: 2px solid gray;
