--- a/docs/books/theory/style.css
+++ b/docs/books/theory/style.css
@@ -236,3 +236,40 @@ blockquote {
   padding: .5em .5em .5em 1em;
 }
 
+.dark-mode .book-body.fixed {
+  background-color: rgb(40,40,40);
+  color: white;
+}
+
+.dark-mode .book .book-body .page-wrapper .page-inner section.normal {
+  background-color: rgb(40,40,40);
+  color: white;
+}
+.dark-mode .book-summary {
+  background-color: rgb(34,34,34);
+  color: white;
+}
+
+.dark-mode .book.with-summary .book-header.fixed {
+  background-color: rgb(34,34,34);
+  color: white;
+}
+
+
+.dark-mode .book .book-summary ul.summary li a, .book .book-summary ul.summary li span {
+  color: white;
+}
+
+.dark-mode .book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active>a {
+  color: #008cff;
+}
+.dark-mode h1 {
+  color: #ccc;
+}
+
+.dark-mode .book .book-body .page-wrapper .page-inner section.normal table tr {
+  background-color: rgb(40,40,40);
+}
+.dark-mode .book .book-body .page-wrapper .page-inner section.normal table tr:nth-child(2n) {
+  background-color: rgb(34,34,34);
+}
